[gd_scene load_steps=6 format=3 uid="uid://bih8pbmx2k0uf"]

[ext_resource type="Script" path="res://Player/animations/Combat/projectiles/FireBall/FireBall1.gd" id="1_pim24"]
[ext_resource type="Texture2D" uid="uid://brc87or8cq5ft" path="res://Player/animations/Combat/projectiles/FireBall/fireball1.png" id="2_jerd3"]
[ext_resource type="AudioStream" uid="uid://dy5b3r2ui7svo" path="res://Audio/SoundEffects/fireBallHit.mp3" id="3_emq4e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r3ldn"]
radius = 12.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w6sue"]
radius = 12.0
height = 26.0

[node name="FireBall1" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_pim24")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jerd3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 0)
shape = SubResource("CapsuleShape2D_r3ldn")

[node name="fireBall1Area" type="Area2D" parent="."]
position = Vector2(8, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="fireBall1Area"]
shape = SubResource("CapsuleShape2D_w6sue")

[node name="FireBallHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_emq4e")

[connection signal="area_entered" from="fireBall1Area" to="." method="_on_fire_ball_1_area_area_entered"]
